tests/errors/err_unknown_statement.bas
10 FOOBAR X
20 PRINT "OK"
